# dtwmcmd

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  dtwmcmd.c
